Fixed Book Cover Stetching Too Wide
Discovered Here https://github.com/btpf/Alexandria/issues/13#issuecomment-1706008425

--- a/src/routes/Home/Home.module.scss
+++ b/src/routes/Home/Home.module.scss
@@ -279,7 +279,7 @@ $bookmarkHeight: 23px;
 }
 
 .boxBottomBar{
-  width:100%;
+  width: var(--book-width);
   height: 40px;
   display:flex;
   flex-direction: row;
